--- a/music_playing_app/frontend/static/css/index.css
+++ b/music_playing_app/frontend/static/css/index.css
@@ -13,7 +13,13 @@ html, body {
 }
 
 #app {
-    display: fixed;
     width: 100%;
     height: 100%;
+}
+
+.center {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
